# mba-copilot-vp2565

./: .env.example  .gitignore  .python-version  Makefile  README.md  auth.config.ts  auth.ts  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  pyproject.toml  requirements.txt  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/: layout.tsx  page.tsx  types.ts
app/api/auth/[...nextauth]/: route.ts
app/api/test/: route.ts
app/api/upload-chunk/: route.ts
app/auth/error/: page.tsx
app/auth/signin/: page.tsx
app/components/: DocumentTree.tsx  PasswordGate.tsx  SettingsModal.tsx
serverless/backend/: index.py
