[project]
name = "mba-copilot"
version = "1.0.0"
description = "Personal AI copilot for MBA students - RAG-powered document Q&A"
authors = [{ name = "Malek Ben Sliman", email = "malekbensliman@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0,<0.110.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "openai>=1.12.0,<2.0.0",
    "pinecone-client>=3.0.0,<4.0.0",
    "python-multipart>=0.0.6,<0.0.7",
    "pymupdf>=1.23.0,<2.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-pptx>=1.0.2,<2.0.0",
    "tiktoken>=0.12.0,<1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.3",
    "mypy>=1.8.0",
]

[tool.pyright]
# VSCode uses pyright instead of mypy out of the box and this disables it
typeCheckingMode = "off"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["serverless"]

[tool.ruff]
target-version = "py312"
extend-include = ["*.ipynb"]
exclude = [".git", "__pycache__", "archive", ".ipython"]
line-length = 100

[tool.ruff.lint]
ignore = ["E402", "E501"]
select = [
    "D", # pydocstyle
    "E", # Pep8
    "W", # Pep8
    "F", # Flake8
    "RUF", # Ruff-specific Rules
    "N", # Pep8-Naming
    "C9", # McCabe Complexity
    "I", # Isort
    "B", # Bugbear
    "T10", # Debugger
    "TCH", # Typecheck Imports

]
fixable = [
    "RUF", # Ruff-specific Rules
    "I", # Isort
    "TCH", # Typecheck Imports
    "D", #pydocstyle
    "F401", # unused imports

]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["D"]

[tool.mypy]
python_version = 3.12
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_warn_no_return = true
allow_redefinition = true
disable_error_code = "top-level-await"
check_untyped_defs = true # Warn if you use functions without type annotations
disallow_untyped_defs = true # Force all functions to have type hints
disallow_incomplete_defs = true # Force type annotations on all args (even with default values)
